[tool.poetry]
name = "signhere"
version = "0.2.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
PyMuPDF = "^1.18.13"
Pillow = "^8.2.0"

[tool.poetry.dev-dependencies]
Sphinx = "^4.0.2"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
