[tool.poetry]
name = "signhere"
version = "0.5.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
PyMuPDF = "^1.25.5"
Pillow = "^11.2.1"

[tool.poetry.group.dev.dependencies]
Sphinx = "^4.0.2"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
